# remove_starfield

./: .gitignore  README.md  pyproject.toml  pytest.ini  remove_starfield_demo.ipynb
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/source/: conf.py  development.rst  getting_started.rst  help.rst  index.rst  overview.rst
docs/source/_static/css/: custom.css
remove_starfield/: __init__.py  build_starfield_estimate.py  clean_starfield.py  core.py  level_background.py  no_op_wcs.py  processor.py  reducers.py  star_tools.py  starfield.py  subtracted_image.py  utils.py
remove_starfield/tests/: test_core.py  test_processor.py  test_reducers.py  test_star_tools.py  test_starfield.py  test_subtracted_image.py  test_utils.py
remove_starfield/tests/reference/: test_build_starfield_estimate.fits  test_find_expected_stars_in_frame.txt  test_starfield_subtract_from_image.fits
remove_starfield/tests/test_data/WISPR_files_preprocessed_quarter_size_L3/: psp_L3_wispr_20221206T093017_V1_1221.fits  psp_L3_wispr_20221206T100017_V1_1221.fits  psp_L3_wispr_20221206T103017_V1_1221.fits  psp_L3_wispr_20221206T110017_V1_1221.fits  psp_L3_wispr_20221206T113017_V1_1221.fits  psp_L3_wispr_20221206T120017_V1_1221.fits  psp_L3_wispr_20221206T123017_V1_1221.fits  psp_L3_wispr_20221206T130017_V1_1221.fits  psp_L3_wispr_20221206T133017_V1_1221.fits  psp_L3_wispr_20221206T140017_V1_1221.fits  psp_L3_wispr_20221206T143017_V1_1221.fits  psp_L3_wispr_20221206T150017_V1_1221.fits  psp_L3_wispr_20221206T153017_V1_1221.fits  psp_L3_wispr_20221206T160017_V1_1221.fits  psp_L3_wispr_20221206T163017_V1_1221.fits  psp_L3_wispr_20221206T170017_V1_1221.fits  psp_L3_wispr_20221206T173017_V1_1221.fits  psp_L3_wispr_20221206T180017_V1_1221.fits  psp_L3_wispr_20221206T183017_V1_1221.fits  psp_L3_wispr_20221206T190017_V1_1221.fits  psp_L3_wispr_20221206T193017_V1_1221.fits  psp_L3_wispr_20221206T200017_V1_1221.fits  psp_L3_wispr_20221206T203017_V1_1221.fits  psp_L3_wispr_20221206T210017_V1_1221.fits  psp_L3_wispr_20221206T213017_V1_1221.fits  psp_L3_wispr_20221206T220017_V1_1221.fits  psp_L3_wispr_20221206T223017_V1_1221.fits  (+23 more)
(+16 files in other folders)
