[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "remove_starfield"
version = "0.0.1"
dependencies = [
	"astropy >= 5.0",
	"matplotlib >= 3.6",
	"numpy >= 1.21",
	"scipy >= 1.8",
	"reproject >= 0.13",
	"dask >= 2023.05.0",
	"h5py >= 3.10",
]
requires-python = ">= 3.8"
authors = [
	{name="Sam Van Kooten"},
]

description = "Python code for estimating and removing a starfield from a set of celestial images"
readme = "README.md"

[project.optional-dependencies]
test = [
	"pytest >= 8.0",
	"pytest-arraydiff >= 0.6",
	"pytest-mpl >= 0.16",
]