[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "remove_starfield"
dynamic = ["version"]
dependencies = [
	"astropy >= 6.1.2",
	"h5py >= 3.10",
	"ipywidgets >= 8.0",
	"matplotlib >= 3.6",
	"numpy >= 1.21",
	"reproject >= 0.13",
	"scipy >= 1.8",
	"tqdm >= 4.66",
]
requires-python = ">= 3.10"
authors = [
	{name="Sam Van Kooten"},
]

description = "Python code for estimating and removing a starfield from a set of celestial images"
readme = "README.md"

[project.optional-dependencies]
test = [
	"pytest >= 8.0",
	"pytest-arraydiff >= 0.6",
	"pytest-mock >= 3.7",
	"pytest-mpl >= 0.16",
]

[tool.setuptools.dynamic]
version = {attr = "remove_starfield.__version__"}